--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                         <span>VERADOR</span>              
                     </div>
                     <div class="d-1-3">
-                        <div class="numero pisca">1</div>
-                        <div class="numero">8</div>
+                        <div class="numero pisca"></div>
+                        <div class="numero"></div>
                     </div>
                     <div class="d-1-4">
                         Nome: Fulano de Tal <br/>
